consider position sticky on nav bar

--- a/hotel/styles/common-nav-bar.css
+++ b/hotel/styles/common-nav-bar.css
@@ -1,8 +1,13 @@
+nav{
+    position: sticky;
+    top: 0;
+}
 ul{
     padding: 0px;
     margin: 0px;
     background-color: #333;
 }
+
 li{
     display: inline-block;
     
