--- a/hw3/styles/style.css
+++ b/hw3/styles/style.css
@@ -1,11 +1,13 @@
 :root{
-    --customGrey:#CCCCCC
+    --customGrey:#CCCCCC;
+    --skinGrey:#F1F1F1;
+    --customWhite:#fff
 }
 
 @font-face {
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVuEorCFPrEHJA.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
@@ -14,7 +16,7 @@
   @font-face {
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVuEorCMPrEHJA.woff2) format('woff2');
     unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
@@ -23,7 +25,7 @@
   @font-face {
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVuEorCHPrEHJA.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
@@ -32,7 +34,7 @@
   @font-face {
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVuEorCGPrEHJA.woff2) format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
@@ -41,7 +43,7 @@
   @font-face {
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVuEorCIPrE.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -57,9 +59,10 @@ body{
 *{
     box-sizing: border-box;
     font-family:'Raleway';
+    
 }
 aside{
-    width: 20%;
+    width: 25%;
     height: 100vh;
     position: sticky;
     top: 0;
@@ -112,6 +115,97 @@ li a{
     opacity: .6;
 }
 main{
-    width: 80%;
+    width: 75%;
+    background-color: var(--skinGrey);
+
+}
+.top-header{
+    padding: 15px 10px;
+}
+.top-header h1{
+   font-weight: 900;
+    font-size: 2em;
+   margin-top: 0px;
+}
+.filter{
+    display: flex;
+    gap: 10px;
+    padding-block: 15px;
+    font-weight: 500;
+    border-bottom: 7px var(--customGrey) solid;
+}
+.filter-all, .filter-design,.filter-photo,.filter-art{
+    padding: 5px 10px;
+    background-color: var(--customWhite);
+}
+.filter-all{
+    background-color: black;
+    color: var(--customWhite);
+}
+.filter-all:hover{
+    color: black;
+    background-color: var(--customGrey);
+}
+.filter-design:hover,.filter-photo:hover,.filter-art:hover{
+    background-color: var(--customGrey);
+}
+.filter div:first-child{
+    padding-block: 5px;
+}
+.filter button{
+    border:0px;
+    cursor: pointer;
+}
+.filter button i{
+    padding-inline: 8px;
+    font-size: 18px;
+}
+.main-images {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px 10px;
+    gap: 10px;
+    /* background-color: #009688; */
+}
+.main-image-box{
+    width: 30%;
+    /* height: 200px; */
+    flex-grow: 1;
+    background-color: var(--customWhite);
+}
+.main-image-box div{
+    padding-inline: 15px;
+
+}
+.main-image-box img{
+    width: 100%;
+    height: 200px;
+}
+.main-image-box img:hover{
+    opacity: .6;
+}
+.pagination{
+    padding: 40px 10px;
+    display: flex;
+    justify-content: center;
+}
+.pagination div a{
+    display: block;
+    padding: 5px 15px;
+    text-decoration: none;
+    color: black;
+}
+.page-one{
+    background-color: black;
+    color: var(--customWhite) !important;
+}
+
+.page-one:hover{
+    color: black;
+    background-color: var(--customGrey);
+}
+.last-page:hover,.page-two:hover,.page-three:hover,.page-four:hover,.next-page:hover{
+    background-color: black;
+    color: var(--customWhite);
 
 }
