change position to flex in galleries section

--- a/hw4/sass/__flex.scss
+++ b/hw4/sass/__flex.scss
@@ -5,9 +5,6 @@
 .jusify-space-between{
     justify-content: space-between;
 }
-.flex-wrap{
-    flex-wrap: wrap;
-}
-.align-item-start{
-    align-items: start;
+.column-flex-direction{
+    flex-direction: column;
 }
