--- a/hw4/styles/register.css
+++ b/hw4/styles/register.css
@@ -16,12 +16,8 @@
   justify-content: space-between;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.align-item-start {
-  align-items: start;
+.column-flex-direction {
+  flex-direction: column;
 }
 
 .nav-top {
@@ -42,12 +38,8 @@
   justify-content: space-between;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.align-item-start {
-  align-items: start;
+.column-flex-direction {
+  flex-direction: column;
 }
 
 * {
