--- a/hw5/styles/tablet-design.css
+++ b/hw5/styles/tablet-design.css
@@ -1,15 +1,15 @@
 @media screen and (min-width:601px) and (max-width:992px){
-    aside{
+    .sidebar{
         display: none;
     }
-    main{
+    .main{
         width: 100%;
     }
-    .small-device{
+    .main__header__hide-section{
         display: flex;
         justify-content: space-between;
     }
-    footer{
+    .footer{
         width: 100%;
     }
 }
