--- a/hw7/template-app/src/components/header/main.css
+++ b/hw7/template-app/src/components/header/main.css
@@ -6,6 +6,9 @@
   padding: 10px 20px;
   gap: 40px;
 }
+.heading__image {
+  cursor: pointer;
+}
 .heading__list {
   margin: 0px;
   padding: 0px;
@@ -22,6 +25,9 @@
   align-items: center;
   border-radius: 5px;
 }
+.heading__list__item a:hover {
+  background-color: rgb(223, 216, 216);
+}
 .heading__link {
   flex-grow: 1;
   display: flex;
@@ -37,6 +43,9 @@
   padding-inline: 10px;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1607843137);
   height: 100%;
+}
+.heading__link a:hover {
+  background-color: rgb(223, 216, 216);
 }
 .heading__image {
   width: 40px;
