--- a/hw9/wallpaper-app/src/layouts/Main/main.scss
+++ b/hw9/wallpaper-app/src/layouts/Main/main.scss
@@ -1,6 +1,6 @@
 .main{
 
-    padding-inline: 150px;
+    padding-inline: 5%;
     display: flex;
     justify-content: space-between;
     
@@ -21,7 +21,7 @@
             margin: 0;
             &--h2{
                 font-weight: 800;
-                font-size: 2.5rem;
+                font-size: 2rem;
     
                 &__span{
                     background: linear-gradient(#05F591,#05F5D9);
@@ -31,7 +31,7 @@
             }
 
             &--h4{
-                font-size: 1.8rem;
+                font-size: 1.5rem;
             }
         }
 
@@ -61,3 +61,4 @@
     }
  
 }
+
